--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,2 @@
-<h1>Edit your article here!</h1>
-
+<h1 class="text-center mt-4">Edit article</h1>
 <%= render 'form' %>
-
-<%= link_to 'Cancel return to articles listing', articles_path %>
