--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,9 @@
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     
+
+    <% if !logged_in? %>
     <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %>
+    <%end%>
   </div>
 </div>
